--- a/app.json
+++ b/app.json
@@ -23,6 +23,15 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "L'application souhaite accéder à vos photos.",
+          "cameraPermission": "L'application souhaite accéder à votre caméra."
+        }
+      ]
+    ]
   }
 }
